--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 			</ol>
      </div>
      <div class="gambar">
-         <a href="https://github.com/ImanBD" target="_blank">klik disini</a><br>
-         <img src="OPiece.jpg" alt="gambar">
-         
+         <a href="https://www.facebook.com/Bubur2Rasa" target="_blank">klik disini</a><br>
+         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnYj16A27Xg4Xyun7vMu3P4gydPwJ0xTHWZMlzAZo6fLS2JoG_" alt="gambar">
      </div>
     </body>
 </html>
